Se arregló el nombre de un paquete y se eliminaron warnings